styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');


/* Main Variables */
:root {
    --font-size: 2.5rem;
    --font-color: white;
    --background-color: #080c13;
    --background-color2: #0d121d;
    --font-family: "Inter", sans-serif;
    --sec-color: rgba(19, 18, 18, 0.836);
    --max-width: 1200px;
    --terc-color: #0072ff;
    --terc-color-2: #317dda;
}
* {
    margin: 0;
    box-sizing: border-box;
}
.terc-color {

    color: var(--terc-color-2)
}
.gray {
    background-color:rgba(19, 18, 18, 0.836);
    
}
.grid {
    display: grid;
}
.red {
    background-color:red;
}

.blue {
    background-color:rgb(50, 50, 151);
    padding:0.2rem;
}

.green {
    background-color: green;
}
.yellow {
    background-color: yellow;
}

.flex {
    display:flex;
    justify-content: space-between;
}
.hidden {
    display:none;
}

body {
    font-family: var(--font-family);
    font-size: var(--font-size);
    color: var(--font-color);
    background-color: var(--background-color);
}

/* Header */
header {
position: sticky;
    top:0;
    background-color: var(--background-color);
    z-index:2;
    
}
.nav-container {
    
    padding: 1rem 0 1rem;
    max-width: var(--max-width);
    margin:auto;
    justify-content: center;
}
nav a {
    font-size: calc(var(--font-size) * 0.6);
    align-items: flex-end;
    border-style: solid;
    border-color: transparent;
    border-width: 0 0 2px 0;
    transition:0.2s;
}
nav a:any-link, .view-source:any-link {
    color: white;
    text-decoration: none;
}
nav a:hover {
    border-color: var(--terc-color);
}
.my-image {
    width: 60%;
    width:160px;
    height: 100%;
    border-radius: 300px;
    object-fit: cover;
}
.links {
    gap: 1rem;
    align-items:center;
}



/* Main */
main {
    flex-direction: column;
    gap: 5rem;
}
section {
    width:95%;
}
.info-container {
    flex-direction: column;
    /*grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);*/
    margin:auto;
    max-width: var(--max-width);
    padding:1rem;
    gap:5rem;
}
.my-image {
    animation: sliding 2s ease-in-out infinite alternate;
}
    .my-image-head {
    flex-direction: column;
    gap:3rem;
}
.main-image {
    margin: 4rem 0 0;
    flex-direction: column;
    align-items: center;;
    justify-content: space-evenly;
    text-align: center;
    
}
.aboutme-title-div {
    flex-direction: column;
    gap:0.5rem;
}
.title {
    margin-top: 1.5rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: calc(var(--font-size) * 1.5);
}

.subtitle {
    font-weight: bold;
    font-size: calc(var(--font-size) * 0.85);
}
.subtitle, .desc {
    text-align: center;
}
.desc {
    font-size: calc(var(--font-size) * 0.65);
    text-align: left;
    line-height: 1.7;
    color: rgb(190, 188, 188)
}

/* SKILLS */

.section-title {
    
    font-size: calc(var(--font-size) * 1.25);
}
.skill-container, .contact-card {
    display:flex;
    padding:1rem;    
    width: 100%;
    border-radius: 8px;

    border: 1px solid transparent;
    flex-direction: column;
    align-items: center;
    background-color: var(--sec-color);
    transition: 0.1s;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
}
.icons-container {
        padding: 2rem;
    flex-wrap: wrap;
    display:flex;
    justify-content: center;;
    gap: 1rem;

}
.icon {
    width:25px;
}
.skill-container:hover, .project-body:hover, .contact-card:hover {
    box-shadow: 0 10px 20px rgba(0, 123, 255, 0.15); 
    border: 1px solid var(--terc-color);
    transform: translateY(-10%)
}
.skill-title {
        padding: 2rem;
    font-size: calc(var(--font-size) * 1);
}
.skill-grid {
    grid-template-columns: repeat(1,1fr);
    gap: 2rem;
}

.projects-grid {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3,1fr);
    justify-content: center;
    align-items: start;
    gap: 2rem;
}

.card {
    border-radius: 50px;
    animation: ease-in-out 2s infinite alternate terminal-sliding1;
    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
}
.section-title {
    border-bottom: 1px solid var(--terc-color);
    padding-bottom: 0.5rem;
    
}
h2 {
    margin-bottom:3rem;
}
.project-body{
    text-align: center;
    padding: 2rem;
    border: 1px solid #ffffff15;
    gap:3rem;
    justify-content: space-between;
    display: flex;
    flex-direction: column;
    background-color: black;
    width:100%;
    transition:0.3s;
    border-radius: 0 0 10px 10px;
    font-size: calc(var(--font-size) * 0.7);
    
}
.project-title {
    display: flex;
    justify-content: center;
    font-size: calc(var(--font-size) * 0.9);
    font-weight: bold;
}
.project-tags-div {
    margin:auto;
    justify-content: center;
    display:flex;
    flex-wrap: wrap;
    gap: 1rem;
}
.project-tag {
    font-size: calc(var(--font-size) * 0.5);
    display:inline-block;
    padding:0.5rem 1rem;
    border-radius: 50px;
    border: 1px solid var(--terc-color);
    background-color: var(--sec-color);

}

.view-source {
    background-color: rgb(26, 25, 25);
    padding:0.8rem 1.5rem;
    border-radius:8px;
    align-self: center;
    justify-self: center;
    margin-top: 0.5rem;
    transition: 0.2s;
    gap: 1rem;
}
.view-source p {
    display:flex;
    justify-content: center;
    align-items: center;
}
.view-source:hover {
    background-color: var(--terc-color);
    transform: scale(110%);
}
.terminal-title {
    font-size: calc(var(--font-size) * 0.75);
    text-align:center;
}
.tbody-text {
    display:flex;
    flex-direction: column;
    gap:1rem;
    line-height: 1.6;
}
.localhost {
    color: green;
}
.shell{
    color: rgb(60, 60, 168)
}

.button {
    width:10px;
    height:10px;
    border-radius:50px;
}


.main-button {
    font-weight: bold;
    padding:0.8rem 1rem;
    width:100%;
    font-size: calc(var(--font-size) * 0.8);
    color: var(--font-color);
    background: var(--terc-color);
    border: 2px solid var(--background-color);
    border-radius:50px;
    transition:0.1s;
    animation:  1s ease-in-out infinite alternate;
    font-width: bold;
    gap: 1rem;
    justify-content: center;
    align-items: center;
}
.main-button:any-link {
    text-decoration: none;
}
.main-button-a:any-link {
    text-decoration: none;
}

.main-button:hover {
    background-color: var(--terc-color-2);
}

.aboutme-background-container {
    font-size: calc(var(--font-size) * 0.8);
}
pre {
    white-space: pre-wrap;
    padding: 2rem;
    
}

.whoami {
    font-size: calc(var(--font-size) * 1);
}
.about-json {
    font-size: calc(var(--font-size) * 0.60);
    border-radius: 20px;
    border: 1px solid transparent;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
    transition: 0.2s;
}
.curiosity {
    color: rgb(131, 131, 131)
}
.about-json:hover {
    transform: translateY(-20px);
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8); 
}
.json-property {
    background-color: rgb(19, 18, 18);;
    transition: 0.2s;
    border: 2px solid transparent;
}
.json-property:hover {
    border-radius: 10px;

    padding:0 0.5rem;
    transform: translateY(-20px);
    font-size: calc(var(--font-size) * 0.9);

}

.pill {
    
    border-radius: 50px;
    display:flex;
    background-color: var(--terc-color);
    font-size: calc(var(--font-size) * 0.8);
    padding:0.5rem 1rem;
    align-items: center;
    gap: 0.5rem;
}
.skill-image {
   object-fit: cover;
        width:100%;
        max-height: 300px;
}
.contact-card {
    margin-bottom: 5rem;
    display:flex;
    flex-direction: column;
    gap:2rem;
    padding: 3rem;
    max-width: 700px;
    align-self:center;
}
.contact-title {
    font-size: calc(var(--font-size) * 1.5);
  
}
.contact-desc {
    text-align: center;
     font-size: calc(var(--font-size) * 0.8);
}
.email-button {
    font-size: calc(var(--font-size) * 0.7);
}
.buttons-div {
    font-size: calc(var(--font-size) * 0.7);
    align-items: center;;
    flex-direction:column;
    width:90%;
    gap:1rem;
}
.buttons-div > div {
    
    display: flex;
    gap: 1rem;
}
.gray-button {
    background-color: rgb(37, 37, 37);
    font-size: calc(var(--font-size) * 0.7);
}
footer {
    font-size: calc(var(--font-size) * 0.6);
    background-color: var(--sec-color);
    padding: 3rem 2rem;
    display:flex;
    justify-content: center;;
}
@media (max-width:460px){
    :root {
        --font-size: 1.5rem;
    }
    nav {
        padding:1rem;
    }
    .main-image {
    grid-row: 1/3;
    
    
}
    .main-image-comp {
    grid-column: 2/4
}
    .main-button {
        width: 100%;
    }
}



@media (min-width: 460px){
    .title, .subtitle, .desc {
        text-align: left;
    }
    .my-image{
        width:200px;
        height:200px;
    }
    .main-image {
        margin: 4rem 0 4rem;
        gap: 50px;
        flex-direction:row;
        align-items: center;
        justify-items: center;
        
    }
    .desc {
        font-size: calc(var(--font-size) * 0.65);
    }
    .nav-container {
        
        justify-content: flex-end;
    }
    .main-button {
        max-width:200px;
        margin-top: 1rem;
    }
    .main-button:hover {
        transform: scale(110%);
    }
    .icon {
        width: 35px;
    }
    .terminal-body {
        height:300px;
    }
}
@media (min-width:1000px){
    :root {
        --font-size: 1.5rem;
    }
    .links {
        padding: 0.5rem;
        gap:2.5rem;
    }
    .my-image {
        width:250px;
        height:250px;
    }
    .my-image-head {
        justify-content: flex-start;
        max-width: 750px;
    }
    .title {
        font-size: calc(var(--font-size) * 2.25);
    }
    .subtitle  {
        font-size: var(--font-size);
    }
    .desc {
        font-size: calc(var(--font-size) * 0.75)
    }
    .icon {
        width: 30px;
    }
    .projects-grid {
        grid-template-rows: 1fr;
        grid-template-columns: repeat(3,1fr);
    }
    .project-body {

        padding: 3rem;
        font-size: calc(var(--font-size) * 0.65);
    }
    pre {
        padding:2rem;
        max-width:55%;
    }
    
    .about-json {
        font-size: calc(var(--font-size) * 0.8)
    }
    .whoami {
        font-size: calc(var(--font-size) * 1.1)
    }
    .icon {
        width:30px;
    }
    .pill {
        font-size: calc(var(--font-size) * 0.8);
    }
    .skill-grid {
        grid-template-columns: repeat(4,1fr);
    }
    .contact-desc {
        font-size: calc(var(--font-size) * 1);
    }
    pre > div {
    margin-left: 5rem;
}
.email-button {
    font-size: calc(var(--font-size) * 0.8);
}
.buttons-div {
    font-size: calc(var(--font-size) * 0.9);
}
}

/* ANIMAÇÕES CSS*/

@keyframes sliding {
    0% {transform: translateY(5);}
    100% {transform: translateY(-5px);}
}

@keyframes terminal-sliding1 {
    0% {transform: translateY(0);}
    100% {transform: translateY(10px);}
}

@keyframes terminal-sliding2 {
    0% {transform: translateY(0);}
    100% {transform: translateY(-10px);}
}

@keyframes shine {
    from{
  
        box-shadow: 0 0 10px var(--terc-color-2);
    }
    to {
  
        ox-shadow: 0 0 10px var(--terc-color-2);
    }
}

